refactor: Make webapp self-contained
Refactored the web application to be self-contained by including the helper JAR as a library. This removes the need for a separate build step and environment variables.

- Copied the helper JAR to the `libs` directory.
- Updated `build.gradle.kts` to include the local JAR as a dependency.
- Modified `PatchService.java` to use the `PluginPatcher` from the classpath.
- Corrected a logger type mismatch in `PatchService.java`.
- Updated `README.md` to reflect the simplified build and run process.

Note: The web application build is still failing to produce an artifact, even though the build process reports success. This issue needs further investigation of the build environment itself.